[tool.poetry]
name = "machine-learning-exam"
version = "0.1.0"
description = ""
authors = ["rodion ivliev <rodion.ivliev@tantorlabs.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
catboost = "^1.2.5"
numpy = "<2.0.0"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
